@@ -3109,6 +3109,7 @@ structure representations"
                "LOWTAG-LIMIT" "LOWTAG-MASK"
                "LRA-SAVE-OFFSET"
                "MAX-INTERRUPTS"
+               #!+c-stack-is-control-stack "MEMORY-FAULT-EMULATION-TRAP"
                "MEMORY-USAGE"
                "N-LOWTAG-BITS"
                "N-FIXNUM-TAG-BITS"
