@@ -121,6 +121,7 @@
   single-step-around-trap
   single-step-before-trap
   invalid-arg-count-trap
+  memory-fault-emulation-trap
   #!+sb-safepoint global-safepoint-trap
   #!+sb-safepoint csp-safepoint-trap)
 
