@@ -210,6 +210,7 @@
   fun-end-breakpoint-trap
   single-step-around-trap
   single-step-before-trap
+  memory-fault-emulation-trap
   #!+sb-safepoint global-safepoint-trap
   #!+sb-safepoint csp-safepoint-trap)
 
