@@ -11,6 +11,9 @@ changes relative to sbcl-1.4.2:
   * bug fix: argumentless CALL-NEXT-METHOD where specialized-to-T or
     unspecialized parameters are mutated now uses the original (non-mutated)
     parameter values (lp#1734771)
+  * bug fix: memory faults from lisp no longer use (thread-and-interrupt
+    unsafe) global storage for fault addresses (everywhere), and now have
+    cleaner backtraces (on x86 and x86-64). (lp#309068)
 
 changes in sbcl-1.4.2 relative to sbcl-1.4.1:
   * minor incompatible change: SB-EXT:QUIT is no longer marked as deprecated
